--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,14 @@
 spring.application.name=spring-boot-simple
 server.port=8080
-mysql.url=jdbc:mysql://host1:33060/test
+spring.datasource.url=jdbc:mysql://localhost:3306/micro_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=ha
+spring.datasource.password=26072000Ha.
 
 
-# Bỏ tính năng cache của thymeleaf để lập trình cho nhanh
-spring.thymeleaf.cache=false
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Các message tĩnh sẽ được lưu tại thư mục i18n
-spring.messages.basename=i18n/messages
-
-
-# Bỏ properties này đi khi deploy
-# Nó có tác dụng cố định ngôn ngữ hiện tại chỉ là Tiếng Việt
-spring.mvc.locale-resolver=fixed
-
-# Mặc định ngôn ngữ là tiếng việt
-spring.mvc.locale=vi_VN
-# Đổi thành tiếng anh bằng cách bỏ comment ở dứoi
-# spring.mvc.locale=en_US
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.show-sql = true
