delete unused pack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-boot-simple
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/micro_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=ha
 spring.datasource.password=26072000Ha.
+spring.datasource.username=root
 
 
 ## Hibernate Properties
