--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,23 @@
 spring.application.name=spring-boot-simple
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/micro_db?allowPublicKeyRetrieval=true&useSSL=false
+
+# Bỏ tính năng cache của thymeleaf để lập trình cho nhanh
+spring.thymeleaf.cache=false
+
+# Các message tĩnh sẽ được lưu tại thư mục i18n
+spring.messages.basename=i18n/messages
+
+# Bỏ properties này đi khi deploy
+# Nó có tác dụng cố định ngôn ngữ hiện tại chỉ là Tiếng Việt
+spring.mvc.locale-resolver=fixed
+
+# Mặc định ngôn ngữ là tiếng việt
+spring.mvc.locale=vi_VN
+# Đổi thành tiếng anh bằng cách bỏ comment ở dứoi
+#spring.mvc.locale=en_US
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.password=26072000Ha.
 spring.datasource.username=root
 
