--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mvc.locale=vi_VN
 #spring.mvc.locale=en_US
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/todo_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_db
 spring.datasource.password=26072000Ha.
 spring.datasource.username=root
 
@@ -29,3 +29,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.show-sql = true
+
+global.email = test@gmail.com
+global.googleAnalyticsId = U-12345
