--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
-	</dependencies>
+        <!--		mapper-->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
